Bug 305667 - akregator crashes right-clicking the top level feed folder [@ Akregator::ArticleListView::startResizingTitleColumn]
Summary: akregator crashes right-clicking the top level feed folder [@ Akregator::Arti...
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-23 14:34 UTC by Tommy Boatman
Modified: 2012-08-30 20:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tommy Boatman 2012-08-23 14:34:25 UTC
Application: akregator (4.9)
KDE Platform Version: 4.9.00 (Compiled from sources)
Qt Version: 4.8.2
Operating System: Linux 3.3.8 x86_64
Distribution: "Linux so advanced, it may as well be magic"

-- Information about the crash:
Fresh install (compile from source).   Invoke akregator from a shell (remote X forward connection).  Right-click the All Feeds folder.  Crash.

Happnens every time, regardless of whether invoked from the command line or from kontact.

Platform is SourceMage GNU/Linux

The crash can be reproduced every time.

-- Backtrace:
Application: Akregator (akregator), signal: Aborted
Using host libthread_db library "/lib/libthread_db.so.1".
[KCrash Handler]
#6  0x00007f9f8591959e in __GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:67
#7  0x00007f9f8591ae2b in __GI_abort () at abort.c:92
#8  0x00007f9f86ce446f in qt_message_output (msgType=<optimized out>, buf=<optimized out>) at global/qglobal.cpp:2260
#9  0x00007f9f86ce45e2 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=QtFatalMsg, msg=0x7f9f86f31538 "ASSERT: \"%s\" in file %s, line %d", ap=0x7fffc463fa08) at global/qglobal.cpp:2306
#10 0x00007f9f86ce478c in qFatal (msg=<optimized out>) at global/qglobal.cpp:2489
#11 0x00007f9f883b5138 in QHeaderView::setResizeMode (this=<optimized out>, logicalIndex=<optimized out>, mode=QHeaderView::Stretch) at itemviews/qheaderview.cpp:1175
#12 0x00007f9f734a158f in Akregator::ArticleListView::startResizingTitleColumn (this=0xd6bec0) at /usr/src/kdepim-4.9.0/akregator/src/articlelistview.cpp:331
#13 0x00007f9f734a18ad in Akregator::ArticleListView::restoreHeaderState (this=0xd6bec0) at /usr/src/kdepim-4.9.0/akregator/src/articlelistview.cpp:322
#14 0x00007f9f734a1b27 in Akregator::ArticleListView::setGroupMode (this=0xd6bec0) at /usr/src/kdepim-4.9.0/akregator/src/articlelistview.cpp:281
#15 0x00007f9f7349805a in Akregator::SelectionController::articleHeadersAvailable (this=0xde4d00, job=<optimized out>) at /usr/src/kdepim-4.9.0/akregator/src/selectioncontroller.cpp:230
#16 0x00007f9f86ebc4e9 in QMetaObject::activate (sender=0x10e6d60, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffc463fee0) at kernel/qobject.cpp:3547
#17 0x00007f9f8738b67f in KJob::finished (this=<optimized out>, _t1=0x10e6d60) at /usr/src/kdelibs-4.9.0/build/kdecore/kjob.moc:187
#18 0x00007f9f8738b8e5 in KJob::emitResult (this=0x10e6d60) at /usr/src/kdelibs-4.9.0/kdecore/jobs/kjob.cpp:316
#19 0x00007f9f8ceed957 in Akregator::ArticleListJob::doList (this=0x10e6d60) at /usr/src/kdepim-4.9.0/akregator/src/articlejobs.cpp:190
#20 0x00007f9f86ebc4e9 in QMetaObject::activate (sender=0xf44440, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#21 0x00007f9f86ec94ea in timeout (this=0xf44440) at .moc/debug-shared/qtimer.moc:97
#22 QSingleShotTimer::timerEvent (this=0xf44440) at kernel/qtimer.cpp:317
#23 0x00007f9f86ec311c in QObject::event (this=0xf44440, e=<optimized out>) at kernel/qobject.cpp:1157
#24 0x00007f9f87bf4374 in notify_helper (e=0x7fffc46407c0, receiver=0xf44440, this=<optimized out>) at kernel/qapplication.cpp:4551
#25 QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0xf44440, e=0x7fffc46407c0) at kernel/qapplication.cpp:4523
#26 0x00007f9f87bfb0d2 in QApplication::notify (this=0x7fffc4642630, receiver=0xf44440, e=0x7fffc46407c0) at kernel/qapplication.cpp:4412
#27 0x00007f9f88cf6da6 in KApplication::notify (this=0x7fffc4642630, receiver=0xf44440, event=0x7fffc46407c0) at /usr/src/kdelibs-4.9.0/kdeui/kernel/kapplication.cpp:311
#28 0x00007f9f86e964dc in QCoreApplication::notifyInternal (this=0x7fffc4642630, receiver=0xf44440, event=0x7fffc46407c0) at kernel/qcoreapplication.cpp:915
#29 0x00007f9f86ee680c in sendEvent (event=0x7fffc46407c0, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#30 QTimerInfoList::activateTimers (this=0xc086b0) at kernel/qeventdispatcher_unix.cpp:611
#31 0x00007f9f86ee2a6d in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:186
#32 timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:180
#33 0x00007f9f7edcdb13 in g_main_dispatch (context=0xc08560) at gmain.c:2539
#34 g_main_context_dispatch (context=0xc08560) at gmain.c:3075
#35 0x00007f9f7edcde18 in g_main_context_iterate (context=0xc08560, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3146
#36 0x00007f9f7edcdf45 in g_main_context_iterate (dispatch=1, block=1, context=0xc08560, self=<optimized out>) at gmain.c:3113
#37 g_main_context_iteration (context=0xc08560, may_block=1) at gmain.c:3207
#38 0x00007f9f86ee350f in QEventDispatcherGlib::processEvents (this=0xc07680, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#39 0x00007f9f87ce11e0 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#40 0x00007f9f86e92b22 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#41 0x00007f9f86e92d67 in QEventLoop::exec (this=0x7fffc4640a40, flags=...) at kernel/qeventloop.cpp:204
#42 0x00007f9f8825bf71 in QMenu::exec (this=<optimized out>, p=..., action=0x0) at widgets/qmenu.cpp:2113
#43 0x00007f9f73497dc3 in Akregator::SelectionController::subscriptionContextMenuRequested (this=<optimized out>, point=...) at /usr/src/kdepim-4.9.0/akregator/src/selectioncontroller.cpp:284
#44 0x00007f9f86ebc4e9 in QMetaObject::activate (sender=0xe44cb0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffc4640c70) at kernel/qobject.cpp:3547
#45 0x00007f9f87c5fe92 in QWidget::customContextMenuRequested (this=<optimized out>, _t1=...) at .moc/debug-shared/moc_qwidget.cpp:374
#46 0x00007f9f87c6f0ef in QWidget::event (this=0xe44cb0, event=0x7fffc4641b60) at kernel/qwidget.cpp:8541
#47 0x00007f9f881fcc4c in QFrame::event (this=0xe44cb0, e=0x7fffc4641b60) at widgets/qframe.cpp:557
#48 0x00007f9f8839101b in QAbstractItemView::viewportEvent (this=0xe44cb0, event=0x7fffc4641b60) at itemviews/qabstractitemview.cpp:1644
#49 0x00007f9f88402f66 in QTreeView::viewportEvent (this=0xe44cb0, event=0x7fffc4641b60) at itemviews/qtreeview.cpp:1257
#50 0x00007f9f86e966d5 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0xc46350, event=0x7fffc4641b60) at kernel/qcoreapplication.cpp:1025
#51 0x00007f9f87bf4359 in notify_helper (e=0x7fffc4641b60, receiver=0xc46350, this=0xc09880) at kernel/qapplication.cpp:4547
#52 QApplicationPrivate::notify_helper (this=0xc09880, receiver=0xc46350, e=0x7fffc4641b60) at kernel/qapplication.cpp:4523
#53 0x00007f9f87bfb3f3 in QApplication::notify (this=<optimized out>, receiver=0xc46350, e=0x7fffc4641b60) at kernel/qapplication.cpp:4173
#54 0x00007f9f88cf6da6 in KApplication::notify (this=0x7fffc4642630, receiver=0xc46350, event=0x7fffc4641b60) at /usr/src/kdelibs-4.9.0/kdeui/kernel/kapplication.cpp:311
#55 0x00007f9f86e964dc in QCoreApplication::notifyInternal (this=0x7fffc4642630, receiver=0xc46350, event=0x7fffc4641b60) at kernel/qcoreapplication.cpp:915
#56 0x00007f9f87ca75b5 in sendSpontaneousEvent (event=0x7fffc4641b60, receiver=0xc46350) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#57 QETWidget::translateMouseEvent (this=0xcda640, event=<optimized out>) at kernel/qapplication_x11.cpp:4507
#58 0x00007f9f87ca5db2 in QApplication::x11ProcessEvent (this=0x7fffc4642630, event=0x7fffc4642240) at kernel/qapplication_x11.cpp:3625
#59 0x00007f9f87ce1432 in x11EventSourceDispatch (s=0xc0be00, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#60 0x00007f9f7edcdb13 in g_main_dispatch (context=0xc08560) at gmain.c:2539
#61 g_main_context_dispatch (context=0xc08560) at gmain.c:3075
#62 0x00007f9f7edcde18 in g_main_context_iterate (context=0xc08560, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3146
#63 0x00007f9f7edcdf45 in g_main_context_iterate (dispatch=1, block=1, context=0xc08560, self=<optimized out>) at gmain.c:3113
#64 g_main_context_iteration (context=0xc08560, may_block=1) at gmain.c:3207
#65 0x00007f9f86ee350f in QEventDispatcherGlib::processEvents (this=0xc07680, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#66 0x00007f9f87ce11e0 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#67 0x00007f9f86e92b22 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#68 0x00007f9f86e92d67 in QEventLoop::exec (this=0x7fffc46425f0, flags=...) at kernel/qeventloop.cpp:204
#69 0x00007f9f86e9bd75 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#70 0x0000000000408197 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/kdepim-4.9.0/akregator/src/main.cpp:103

Reported using DrKonqi
Comment 1 Tommy Boatman 2012-08-23 14:49:22 UTC
Additional information found in the shell window:  

QObject::connect: Connecting from QTabBar::tabCloseRequested(int) to COMPAT slot (KTabBar::closeRequest(int))
QSystemTrayIcon::setVisible: No Icon set
ASSERT: "visual != -1" in file itemviews/qheaderview.cpp, line 1175
KCrash: Application 'akregator' crashing...
KCrash: Attempting to start /usr/lib/kde4/libexec/drkonqi from kdeinit
Comment 2 Allen Winter 2012-08-28 21:40:57 UTC
Tommy,

Since you are self-compiling, would you feel like doing a test?
I can't reproduce this.

If you can test, in kdepim/akregator/src/articlelistview.cpp
please add the conditional
if(model()) on line 323 immediately before the call to startResizingTitleColumn()

let me know either way,
Allen
Comment 3 Allen Winter 2012-08-30 20:51:19 UTC
Git commit 84368d12a05445aaf511f657f6d00535060d7204 by Allen Winter.
Committed on 30/08/2012 at 22:50.
Pushed by winterz into branch 'KDE/4.9'.

in restoreHeaderState(), make sure there is a model before attempting
to resize the title column.
FIXED-IN: 4.9.1

M  +4    -1    akregator/src/articlelistview.cpp

http://commits.kde.org/kdepim/84368d12a05445aaf511f657f6d00535060d7204