in restoreHeaderState(), make sure there is a model before attempting to resize the title column.

BUG: 305667
FIXED-IN: 4.9.1